Fix baseline alignment in Navbar

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -24,7 +24,7 @@
 }
 
 .Navbar .nav-menu > h3 {
-    margin-top: 3px;
+    margin-top: 10px;
     margin-bottom: 5px;
     text-align: center;
 }
